[package]
name = "kira-stretch"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = "0.15.3"
kira = "0.10.5"
paste = "1.0.15"
signalsmith-stretch = { git = "https://github.com/WilliamQiufeng/signalsmith-stretch-rs", version = "0.1.2" }

[dev-dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.36", features = ["derive"] }
console = "0.15.11"
glam = "0.30.2"
[profile.dev.package."*"]
opt-level = 3