[package]
name = "kira-pitcher"
version = "0.1.0"
edition = "2024"
description = "A kira effect that shifts the pitch of the audio without changing the speed."
authors = ["WilliamQiufeng"]
license = "MIT"
homepage = "https://github.com/WilliamQiufeng/kira-stretch"
repository = "https://github.com/WilliamQiufeng/kira-stretch"

[dependencies]
cpal = "0.15.3"
kira = "0.10.5"
paste = "1.0.15"
signalsmith-stretch = { version = "0.1.1" }

[dev-dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.36", features = ["derive"] }
console = "0.15.11"
glam = "0.30.2"

[profile.dev.package."*"]
opt-level = 3